syntax = "proto3";

package user_register;

option go_package = "./protoc";

message RegisterRequest {
  string user_name = 1;
  string password = 2;
  string nickname = 3;
  int64 sex = 4;
  string birthday = 5;
}

message RegisterResponse {
  int64 states = 1;
  int64 id = 2;
}

message CancelRequest {
  int64 Id = 1;
}

message CancelResponse {
  int64 states = 1;
}

service user_register_or_cancel {
  rpc userRegister (RegisterRequest) returns (RegisterResponse);
  rpc userCancel (CancelRequest) returns (CancelResponse);
}

